tests/ui/typeck/issue-65611.stderr
error[E0282]: type annotations needed for `ArrayVec<_>`
  --> $DIR/issue-65611.rs:58:9
   |
LL |     let mut buffer = ArrayVec::new();
   |         ^^^^^^^^^^
LL |     let x = buffer.last().unwrap().0.clone();
   |             ------------------------ type must be known at this point
   |
help: consider giving `buffer` an explicit type, where the type for type parameter `A` is specified
   |
LL |     let mut buffer: ArrayVec<A> = ArrayVec::new();
   |                   +++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
